# SelfCorrectingApplevsEpicRAG

./: README.md  pyproject.toml
app/: config.py  doc_retriever.py  prompt.py  rag_chain.py  run_workflow.py  test_deepgram.py
ask_internet/: ask_the_internet.py  search_internet.py
decisions/: decide_to_generate.py
document_retrievers/: document_grade.py  get_relevant_docs.py  grade_document.py  relevancy_prompt.py  retrieve_docs.py
generate/: ask_chat.py  chat.py  chat_prompt.py  generate.py  generate_answer.py  prompt.py
graph/: build_graph.py  graph_state.py
graph/decisions/: decide_to_generate.py
importer/: load_and_process.py
langsmith_testing/: dataset_evaluation.py  evaluate_generate.py  pairwise_evaluation.py
modules/: doc_retriever.py  llm.py  vector_store.py
query_transformer/: query_transformer.py  question_rewriter.py  rewriting_prompt.py
query_transformers/question_for_internet/: internet_prompt.py  internet_query_transformer.py  question_rewriter.py
query_transformers/question_rewriter/: query_transformer.py  question_rewriter.py  rewriting_prompt.py
retrievers/: doc_retriever.py  get_relevant_docs.py  grade_document.py
